DM/LexYacc/_build/parser.output
   0  $accept : %entry% $end

   1  main : C EOL P C N F INT INT EOL liste

   2  liste : EOF
   3        | clause liste
   4        | commentaire liste

   5  commentaire : C texte

   6  texte : C texte
   7        | P texte
   8        | N texte
   9        | F texte
  10        | MOINS texte
  11        | ZERO texte
  12        | INT texte
  13        | TRUC texte
  14        | EOL

  15  clause : ZERO EOL
  16         | MOINS INT clause
  17         | INT clause
  18         | EOL

  19  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (19)

	C  shift 3
	.  error

	main  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	main : C . EOL P C N F INT INT EOL liste  (1)

	EOL  shift 5
	.  error


state 4
	%entry% : '\001' main .  (19)

	.  reduce 19


state 5
	main : C EOL . P C N F INT INT EOL liste  (1)

	P  shift 6
	.  error


state 6
	main : C EOL P . C N F INT INT EOL liste  (1)

	C  shift 7
	.  error


state 7
	main : C EOL P C . N F INT INT EOL liste  (1)

	N  shift 8
	.  error


state 8
	main : C EOL P C N . F INT INT EOL liste  (1)

	F  shift 9
	.  error


state 9
	main : C EOL P C N F . INT INT EOL liste  (1)

	INT  shift 10
	.  error


state 10
	main : C EOL P C N F INT . INT EOL liste  (1)

	INT  shift 11
	.  error


state 11
	main : C EOL P C N F INT INT . EOL liste  (1)

	EOL  shift 12
	.  error


state 12
	main : C EOL P C N F INT INT EOL . liste  (1)

	INT  shift 13
	C  shift 14
	MOINS  shift 15
	EOF  shift 16
	ZERO  shift 17
	EOL  shift 18
	.  error

	liste  goto 19
	clause  goto 20
	commentaire  goto 21


state 13
	clause : INT . clause  (17)

	INT  shift 13
	MOINS  shift 15
	ZERO  shift 17
	EOL  shift 18
	.  error

	clause  goto 22


state 14
	commentaire : C . texte  (5)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 32


state 15
	clause : MOINS . INT clause  (16)

	INT  shift 33
	.  error


state 16
	liste : EOF .  (2)

	.  reduce 2


state 17
	clause : ZERO . EOL  (15)

	EOL  shift 34
	.  error


state 18
	clause : EOL .  (18)

	.  reduce 18


state 19
	main : C EOL P C N F INT INT EOL liste .  (1)

	.  reduce 1


state 20
	liste : clause . liste  (3)

	INT  shift 13
	C  shift 14
	MOINS  shift 15
	EOF  shift 16
	ZERO  shift 17
	EOL  shift 18
	.  error

	liste  goto 35
	clause  goto 20
	commentaire  goto 21


state 21
	liste : commentaire . liste  (4)

	INT  shift 13
	C  shift 14
	MOINS  shift 15
	EOF  shift 16
	ZERO  shift 17
	EOL  shift 18
	.  error

	liste  goto 36
	clause  goto 20
	commentaire  goto 21


state 22
	clause : INT clause .  (17)

	.  reduce 17


state 23
	texte : INT . texte  (12)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 37


state 24
	texte : P . texte  (7)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 38


state 25
	texte : C . texte  (6)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 39


state 26
	texte : N . texte  (8)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 40


state 27
	texte : F . texte  (9)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 41


state 28
	texte : MOINS . texte  (10)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 42


state 29
	texte : ZERO . texte  (11)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 43


state 30
	texte : EOL .  (14)

	.  reduce 14


state 31
	texte : TRUC . texte  (13)

	INT  shift 23
	P  shift 24
	C  shift 25
	N  shift 26
	F  shift 27
	MOINS  shift 28
	ZERO  shift 29
	EOL  shift 30
	TRUC  shift 31
	.  error

	texte  goto 44


state 32
	commentaire : C texte .  (5)

	.  reduce 5


state 33
	clause : MOINS INT . clause  (16)

	INT  shift 13
	MOINS  shift 15
	ZERO  shift 17
	EOL  shift 18
	.  error

	clause  goto 45


state 34
	clause : ZERO EOL .  (15)

	.  reduce 15


state 35
	liste : clause liste .  (3)

	.  reduce 3


state 36
	liste : commentaire liste .  (4)

	.  reduce 4


state 37
	texte : INT texte .  (12)

	.  reduce 12


state 38
	texte : P texte .  (7)

	.  reduce 7


state 39
	texte : C texte .  (6)

	.  reduce 6


state 40
	texte : N texte .  (8)

	.  reduce 8


state 41
	texte : F texte .  (9)

	.  reduce 9


state 42
	texte : MOINS texte .  (10)

	.  reduce 10


state 43
	texte : ZERO texte .  (11)

	.  reduce 11


state 44
	texte : TRUC texte .  (13)

	.  reduce 13


state 45
	clause : MOINS INT clause .  (16)

	.  reduce 16


13 terminals, 7 nonterminals
20 grammar rules, 46 states
